--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,14 @@ body {
 }
 @layer components {
   .nt-bg {
-    background: linear-gradient(rgba(6, 6, 6, 0.71), rgba(0, 0, 0, 0.574)),
+    background-image: linear-gradient(
+        rgba(4, 4, 4, 0.9),
+        rgba(0, 0, 0, 0.505),
+        rgba(6, 6, 6, 0.921)
+      ),
       url(../components/img/netflixbg.jpg);
     height: 680px;
     object-fit: cover;
-    width: 100%;
     background-size: 100% 780px;
     background-repeat: no-repeat;
   }
@@ -23,22 +26,19 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 4rem;
     font-weight: 700;
-    transform: translateX(50%);
     margin-top: 150px;
     line-height: 1.1;
   }
   .watch {
-    transform: translateX(50%);
     font-size: 1.625rem;
     max-width: 800px;
     font-weight: 400;
   }
   .ready {
-    transform: translateX(50%);
     font-size: 1.2rem;
   }
   .email {
-    transform: translateX(50%);
+    max-width: 100%;
   }
   .btn {
     font-size: 1.875rem;
